--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -26,7 +26,7 @@
                 <input id="upload" type="submit" name="submit" class="btn" value="识别" />
             </form>
         </div>
-        <span id="info"></span>
+        <span id="info">说明：点击“浏览”选择任何带有猫、狗、或者同时有猫狗的图片，然后按“识别”，稍等几秒就能看到识别结果。</span>
         <div id="content">
         </div>
 
