--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -9,7 +9,7 @@
     .txt{ height:22px; border:1px solid #cdcdcd; width:180px;}
     .btn{ background-color:#FFF; border:1px solid #CDCDCD;height:24px; width:70px;}
     .file{display:none;}
-    #container{margin:auto;width: 50%;}
+    #container{margin:auto;width: 600px;}
     .title{text-align: center; padding:20px; font-weight: bold; font-size:60px;}
     #content, #info{text-align: center; padding: 10px;}
 </style>
@@ -26,7 +26,8 @@
                 <input id="upload" type="submit" name="submit" class="btn" value="识别" />
             </form>
         </div>
-        <span id="info">说明：点击“浏览”选择任何带有猫、狗、或者同时有猫狗的图片，然后按“识别”，稍等几秒就能看到识别结果。</span>
+        <span id="info">说明：点击“浏览”选择任何带有猫、狗、或者同时有猫狗的图片，然后按“识别”，稍等十秒左右就能看到识别结果。</span>
+        <input id="t" type="hidden" value="0"/>
         <div id="content">
         </div>
 
@@ -36,38 +37,54 @@
 <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 <script>
     $(function () {
+        var iding = false;
         $('#getFile').click(function () {
-            $('#fileField').click();
+            if(iding){
+                alert("识别中，请稍候");
+            }else{
+                $('#fileField').click();
+            }
+
         });
+
         $('#upload').click(function () {
-            $('#info').html('正在识别中...');
-            $('#content').empty();
-            $.ajax({
-                url: '/upload',　　　　　　　　　　//上传地址
-                type: 'POST',
-                cache: false,　　
-                data: new FormData($('#uploadForm')[0]),　　　　　　　　　　　　　//表单数据
-                processData: false,
-                contentType: false,
-                success:function(data){
-                    console.log(data);
-                    var obj = JSON.parse(data);
-                    var img = $('<img/>');
-                    img.attr('src',obj.imgPath);
-                    img.appendTo($('#content'));
-                    img.width('100%');
-                    var prob = parseFloat(obj.result);
-                    var rs = null;
-                    if(prob>0.7){
-                        rs = '图像中'+(prob*100).toFixed(2)+'%的可能是一只狗';
-                    }else if(prob<0.3){
-                        rs = '图像中'+((1-prob)*100).toFixed(2)+'%的可能是一只猫';
-                    }else{
-                        rs = '图像中可能既有狗也有猫';
+            if(iding){
+                alert("识别中，请稍候");
+            }else{
+                iding = true;
+                $('#info').html('正在识别中...');
+                var timer = setInterval("(function(){parseInt($('#t').val())%60==0?$('#info').html('正在识别中...'):$('#info').html($('#info').html() + '.');})($('#t').val(parseInt($('#t').val())+1))",1000);
+
+                $('#content').empty();
+                $.ajax({
+                    url: '/upload',　　　　　　　　　　//上传地址
+                    type: 'POST',
+                    cache: false,
+                    data: new FormData($('#uploadForm')[0]),　　　　　　　　　　　　　//表单数据
+                    processData: false,
+                    contentType: false,
+                    success:function(data){
+                        console.log(data);
+                        iding = false;
+                        clearInterval(timer);
+                        var obj = JSON.parse(data);
+                        var img = $('<img/>');
+                        img.attr('src',obj.imgPath);
+                        img.appendTo($('#content'));
+                        img.width(600);
+                        var prob = parseFloat(obj.result);
+                        var rs = null;
+                        if(prob>0.7){
+                            rs = '图像中'+(prob*100).toFixed(2)+'%的可能是一只狗';
+                        }else if(prob<0.3){
+                            rs = '图像中'+((1-prob)*100).toFixed(2)+'%的可能是一只猫';
+                        }else{
+                            rs = '图像中可能既有狗也有猫';
+                        }
+                        $('#info').html(rs);
                     }
-                    $('#info').html(rs);
-                }
-            });
+                });
+            }
         })
     })
 </script>
